# AUV-Simulator-Gazebo

./: CMakeLists.txt  README.md  auv_plugin.cc  auvpush.cc  freebuoyancy.cc  freebuoyancy.h  model_import.cc  sauvc.world
auvsim_gazebo/: CMakeLists.txt  package.xml
auvsim_gazebo/launch/: auv_sdf.launch  auv_spawn.launch  sauvc.launch
auvsim_gazebo/model_files/: README.txt
auvsim_gazebo/model_files/auv/: model.config  model.sdf
auvsim_gazebo/model_files/auv/meshes/: hull.dae
auvsim_gazebo/model_files/sauvc pool/meshes/: pool.dae
auvsim_gazebo/model_files/sea_surface/: model.config  model.sdf
auvsim_gazebo/msg/: ThrusterSpeeds.msg
auvsim_gazebo/plugins/: auv_plugin.cc  freebuoyancy.cc  freebuoyancy.h
auvsim_gazebo/src/: auv_plugin.cpp  freebuoyancy.cpp
auvsim_gazebo/world/: sauvc.world
model files/: README.txt
model files/auv/: model.sdf
model files/auv/meshes/: hull.dae
model files/sauvc pool/: model.config  model.sdf
model files/sea_surface/: model.config
